stylelint, eslint, lint fix

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,10 @@
 {
   "Привет" : "Hello",
   "Язык" : "English",
-  "Главная страница" : "Main page"
+  "Главная страница" : "Main page",
+  "Главная": "Main",
+  "Кнопка о нас": "About",
+  "Меню" : "Menu",
+  "Загрузка" : "Loading"
 }
 
