--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,9 @@
 {
   "Привет" : "Привет",
   "Язык" : "Русский",
-  "Главная страница" : "Главная страница"
+  "Главная страница" : "Главная страница",
+  "Главная": "Главная",
+  "Кнопка о нас": "О нас",
+  "Меню": "Меню",
+  "Загрузка": "Загрузка"
 }
