--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
   "Главная": "Main",
   "Кнопка о нас": "About",
   "Меню" : "Menu",
-  "Загрузка" : "Loading"
+  "Загрузка" : "Loading",
+  "Страница не найдена": "Page Not Found"
 }
 
