--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "Главная": "Главная",
   "Кнопка о нас": "О нас",
   "Меню": "Меню",
-  "Загрузка": "Загрузка"
+  "Загрузка": "Загрузка",
+  "Страница не найдена": "Страница не найдена"
 }
