refactor sidebar, add svg for menu

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,7 @@
   "Кнопка о нас": "About",
   "Меню" : "Menu",
   "Загрузка" : "Loading",
-  "Страница не найдена": "Page Not Found"
+  "Страница не найдена": "Page Not Found",
+  "Свёрнутый язык": "EN"
 }
 
