--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "Кнопка о нас": "О нас",
   "Меню": "Меню",
   "Загрузка": "Загрузка",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Свёрнутый язык": "RU"
 }
